Added HuggingFace Token Auth to Colab

--- a/TITAN_VIRAL_LAB.ipynb
+++ b/TITAN_VIRAL_LAB.ipynb
@@ -48,6 +48,34 @@
         "!pip install -q diffusers transformers accelerate gradio peft opencv-python-headless safetensors huggingface_hub edge-tts moviepy pydub imageio[ffmpeg]\n",
         "!apt install -y ffmpeg\n",
         "\n",
+        "# CHECK GPU STATUS\n",
+        "import torch\n",
+        "if not torch.cuda.is_available():\n",
+        "    print(\"\\n<!> ATTENZIONE: NESSUNA GPU RILEVATA! <!>\")\n",
+        "    print(\"Il sistema sta girando su CPU (Lento). Per attivare la GPU T4 Gratuita:\")\n",
+        "    print(\"1. Vai su 'Runtime' (in alto) -> 'Change runtime type'\")\n",
+        "    print(\"2. Seleziona 'T4 GPU' sotto 'Hardware accelerator'\")\n",
+        "    print(\"3. Premi 'Save' e riavvia la cella.\")\n",
+        "else:\n",
+        "    print(f\"\\n✅ GPU ATTIVA: {torch.cuda.get_device_name(0)}\")\n",
+        "    print(\"Il sistema e' pronto per la generazione veloce.\")\n",
+        "\n",
+        "# HUGGING FACE AUTH\n",
+        "from huggingface_hub import login\n",
+        "import os\n",
+        "if \"HF_TOKEN\" in os.environ:\n",
+        "    print(\"🔑 HF TOKEN FOUND (Environment).\")\n",
+        "    login(token=os.environ[\"HF_TOKEN\"])\n",
+        "else:\n",
+        "    try:\n",
+        "        from google.colab import userdata\n",
+        "        token = userdata.get('HF_TOKEN')\n",
+        "        print(\"🔑 HF TOKEN FOUND (Colab Secrets).\")\n",
+        "        login(token=token)\n",
+        "    except:\n",
+        "        print(\"⚠️ HF_TOKEN NON TROVATO! Alcuni modelli potrebbero fallire.\")\n",
+        "        print(\"   -> Aggiungi 'HF_TOKEN' nei 'Secrets' di Colab (icona chiave a sinistra).\")\n",
+        "\n",
         "print(\"✅ ENVIRONMENT READY & SYNCED.\")"
       ]
     },
