Major Upgrade: Motion Transfer (ControlNet), Auto-Movie Director, and full automation infrastructure

--- a/TITAN_VIRAL_LAB.ipynb
+++ b/TITAN_VIRAL_LAB.ipynb
@@ -45,7 +45,7 @@
         "    %cd TITAN\n",
         "\n",
         "print(\"🚀 INSTALLING DEPENDENCIES...\")\n",
-        "!pip install -q diffusers transformers accelerate gradio peft opencv-python-headless safetensors huggingface_hub edge-tts moviepy pydub imageio[ffmpeg]\n",
+        "!pip install -q diffusers transformers accelerate gradio peft opencv-python-headless safetensors huggingface_hub edge-tts moviepy pydub imageio[ffmpeg] controlnet_aux mediapipe\n",
         "!apt install -y ffmpeg\n",
         "\n",
         "# CHECK GPU STATUS\n",
@@ -76,7 +76,10 @@
         "        print(\"⚠️ HF_TOKEN NON TROVATO! Alcuni modelli potrebbero fallire.\")\n",
         "        print(\"   -> Aggiungi 'HF_TOKEN' nei 'Secrets' di Colab (icona chiave a sinistra).\")\n",
         "\n",
-        "print(\"✅ ENVIRONMENT READY & SYNCED.\")"
+        "print(\"✅ ENVIRONMENT READY & SYNCED.\")\n",
+        "print(\"\\n----------------------------------------------------------------\")\n",
+        "print(\"👉 NEXT STEP: Run the cell below to start the TITAN API.\")\n",
+        "print(\"----------------------------------------------------------------\")"
       ]
     },
     {
