Downgrade mediapipe to 0.10.9 for better ControlNet compatibility

--- a/TITAN_VIRAL_LAB.ipynb
+++ b/TITAN_VIRAL_LAB.ipynb
@@ -45,7 +45,9 @@
         "    %cd TITAN\n",
         "\n",
         "print(\"🚀 INSTALLING DEPENDENCIES...\")\n",
-        "!pip install -q diffusers transformers accelerate gradio peft opencv-python-headless safetensors huggingface_hub edge-tts moviepy pydub imageio[ffmpeg] controlnet_aux mediapipe\n",
+        "!pip install -q diffusers transformers accelerate gradio peft opencv-python-headless safetensors huggingface_hub edge-tts moviepy pydub imageio[ffmpeg] controlnet_aux\n",
+        "# Force downgrade mediapipe to compatible version for ControlNet\n",
+        "!pip install mediapipe==0.10.9\n",
         "!apt install -y ffmpeg\n",
         "\n",
         "# CHECK GPU STATUS\n",
